resolved responsive issue on mobile
cube animation was partially blocked, move #infoBox higher up on mobile

--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -6,6 +6,7 @@
   
   #infoBox{
 	  
+	  top:10vh;
 	  width:75vw;
 	  margin:0 7.5vw 0 7.5vw;
   }
